--- a/bmi.css
+++ b/bmi.css
@@ -4,6 +4,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  background-color:#000;
 }
 body {
   background-size: cover;
@@ -26,7 +27,6 @@ body {
   margin-bottom: 10px;
 }
 .box::before {
-  content: "";
   position: absolute;
   height: 100%;
   width: 100%;
