--- a/bmi.css
+++ b/bmi.css
@@ -4,7 +4,6 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
- 
 }
 body {
   background-size: cover;
@@ -21,12 +20,13 @@ body {
 .box {
   min-width: 300px;
   background:  #050505;
-  border-radius: 24px;
+  border-radius: 34px;
   text-align: center;
   position: relative;
   margin-bottom: 10px;
 }
 .box::before {
+  content: "";
   position: absolute;
   height: 100%;
   width: 100%;
